# workspace-cli

./: Cargo.toml  test.db  test.ps1
assets/: style.toml
src/: db.rs  main.rs  visual.rs  workspace.rs
