[package]
authors = ["manishsingh10895 <manishsingh10895@gmail.com>"]
edition = "2018"
name = "coper-cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "1.0.1"
colored = "2.0.0"
exitfailure = "0.5.1"
failure = "0.1.8"
predicates = "1.0.5"
rusqlite = { version ="0.25.1", features = ["bundled"] }
structopt = "0.3.17"
dirs = "3.0.2"

[dependencies.cursive]
version = "*"
default-features = false
features = ['pancurses-backend', 'toml']
